--- a/about/index.html
+++ b/about/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Jamon Holmgren - Jammin Games</title>
+    <meta
+      name="description"
+      content="Learn about Jamon Holmgren, software developer, entrepreneur, and indie game developer. Co-founder of Infinite Red and creator of Into the Dawn."
+    />
     <link rel="canonical" href="https://jammin.games/about" />
     <link rel="stylesheet" href="../css/styles.css?v=20241231" />
   </head>
@@ -13,7 +17,7 @@
         <div class="nav-links">
           <a href="/">Home</a>
           <a href="/into-the-dawn">Into the Dawn</a>
-          <a href="/godot-plugins">Godot Plugins</a>
+          <a href="/godot-plugins">Plugins</a>
           <a href="/about">About</a>
           <a href="/faq">FAQ</a>
         </div>
