--- a/faq/index.html
+++ b/faq/index.html
@@ -60,7 +60,7 @@
         <div class="nav-links">
           <a href="/">Home</a>
           <a href="/into-the-dawn">Into the Dawn</a>
-          <a href="/godot-plugins">Godot Plugins</a>
+          <a href="/godot-plugins">Plugins</a>
           <a href="/about">About</a>
           <a href="/faq">FAQ</a>
         </div>
@@ -95,9 +95,17 @@
           is available.
         </div>
         <div class="faq-answer">
-          This usually means that your router isn't set up to handle "UPnP". Do
-          a search for your router model and "enable UPnP" to see if it supports
-          it, and how to turn it on.
+          <p>
+            This usually means that your router isn't set up to handle "UPnP".
+            Do a search for your router model and "enable UPnP" to see if it
+            supports it, and how to turn it on.
+          </p>
+          <p>
+            If you can't get that to work, you might need to forward a port. In
+            your router settings, find the feature for "port forwarding" and add
+            a new forwarded port for port 6464 (TCP and UDP) to your computer's
+            IP address (also port 6464).
+          </p>
         </div>
       </div>
     </div>
