--- a/godot-plugins/index.html
+++ b/godot-plugins/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Free Godot Plugins - Jammin Games</title>
+    <meta
+      name="description"
+      content="Free high-quality Godot 4 plugins from Jammin Games. Ghost collision shapes, FPS counter, and multiplayer lobby system for game developers."
+    />
     <link rel="canonical" href="https://jammin.games/godot-plugins" />
     <link rel="stylesheet" href="../css/styles.css?v=20241231" />
   </head>
@@ -13,7 +17,7 @@
         <div class="nav-links">
           <a href="/">Home</a>
           <a href="/into-the-dawn">Into the Dawn</a>
-          <a href="/godot-plugins">Godot Plugins</a>
+          <a href="/godot-plugins">Plugins</a>
           <a href="/about">About</a>
           <a href="/faq">FAQ</a>
         </div>
@@ -150,6 +154,11 @@
               Provides a complete solution for managing multiplayer game
               sessions with focus on ease of use and reliability.
             </p>
+            <p style="margin-top: 1rem; color: var(--text-secondary)">
+              <strong>Note:</strong> A more advanced version is under
+              development but will likely not be published until Into the Dawn
+              is complete.
+            </p>
             <ul
               style="
                 margin: 1rem 0;
@@ -171,9 +180,6 @@
                 href="https://github.com/jamonholmgren/jammin_lobby"
                 target="_blank"
                 >GitHub →</a
-              >
-              <a href="/uploads/jammin_lobby-0.2.0.zip" target="_blank"
-                >Download 0.2.0 (Jan 30, 2025) →</a
               >
             </div>
           </div>
