--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Jammin Games - home for Jamon Holmgren's Game Development Projects
-    </title>
+    <title>Jammin Games - Developer of Into the Dawn</title>
+    <meta
+      name="description"
+      content="Jammin Games is a game development studio founded by Jamon Holmgren. We are currently developing Into the Dawn, a combat helicopter game."
+    />
     <link rel="canonical" href="https://jammin.games" />
     <link rel="stylesheet" href="css/styles.css?v=20250102" />
   </head>
@@ -15,7 +17,7 @@
         <div class="nav-links">
           <a href="/">Home</a>
           <a href="/into-the-dawn">Into the Dawn</a>
-          <a href="/godot-plugins">Godot Plugins</a>
+          <a href="/godot-plugins">Plugins</a>
           <a href="/about">About</a>
           <a href="/faq">FAQ</a>
         </div>
