--- a/into-the-dawn/index.html
+++ b/into-the-dawn/index.html
@@ -34,7 +34,7 @@
         <div class="nav-links">
           <a href="/">Home</a>
           <a href="/into-the-dawn">Into the Dawn</a>
-          <a href="/godot-plugins">Godot Plugins</a>
+          <a href="/godot-plugins">Plugins</a>
           <a href="/about">About</a>
           <a href="/faq">FAQ</a>
         </div>
@@ -50,7 +50,7 @@
     </nav>
 
     <div class="container game-preview">
-      <img src="../assets/images/alpha-0.2.0.jpg" alt="Into the Dawn Preview" />
+      <img src="../assets/images/alpha-0.3.jpg" alt="Into the Dawn Alpha 0.3" />
       <p class="development-status">Under Development</p>
       <p>
         Into the Dawn is a combat helicopter game in development by Jammin
@@ -61,6 +61,47 @@
 
     <div class="container news-section">
       <h2>Latest News</h2>
+      <div class="news-item" id="alpha-0.3-release">
+        <h3>Alpha 0.3 Released!</h3>
+        <p>Posted September 19, 2025 by Jamon Holmgren</p>
+        <p>
+          After over 6 months in development, I've released Alpha 0.3 of Into
+          the Dawn to my Discord testers!
+        </p>
+        <p>
+          This was a tremendous amount of work -- over 20,000 lines of code
+          changed, most systems substantially or entirely rewritten, and a good
+          base for the next phase of development.
+        </p>
+        <p>Here's a video talking about 0.3 and beyond:</p>
+        <div class="video-container">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/XtNtRdqAZoo"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+          <p>
+            It's still a ways out, with a ton more work to be done. Now I can
+            focus on adding a core gameplay loop, more features, and a proper
+            campaign and pilot career.
+          </p>
+          <p>
+            0.4 will focus on the core gameplay loop. I won't have a full
+            dynamic campaign, but you can sign up as a pilot, do a training
+            mission, and fly missions.
+          </p>
+          <p>
+            If you're interested in following along, email me at my first name
+            at jammin dot games and I'll send you an invite. Include _why_
+            you're interested in joining the test group, too, please!
+          </p>
+        </div>
+      </div>
       <div class="news-item" id="progress-report-2025-08-10">
         <h3>Progress Report after 1 year of development</h3>
         <p>Posted August 10, 2025 by Jamon Holmgren</p>
