--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         muted
         loop
         playsinline
-        poster="assets/images/into-the-dawn-splash.jpg"
+        poster="assets/images/into-the-dawn-splash.jpg?v=0.3"
       >
         <!-- <source src="assets/videos/hero.mp4" type="video/mp4" /> -->
       </video>
