--- a/into-the-dawn/index.html
+++ b/into-the-dawn/index.html
@@ -85,6 +85,8 @@
             referrerpolicy="strict-origin-when-cross-origin"
             allowfullscreen
           ></iframe>
+        </div>
+        <div class="news-content" id="alpha-0.3-content">
           <p>
             It's still a ways out, with a ton more work to be done. Now I can
             focus on adding a core gameplay loop, more features, and a proper
@@ -97,7 +99,8 @@
           </p>
           <p>
             If you're interested in following along, email me at my first name
-            at jammin dot games and I'll send you an invite. Include _why_
+            at jammin dot games and I'll send you an invite. Include
+            <em>why</em>
             you're interested in joining the test group, too, please!
           </p>
         </div>
