Added privacy policy

--- a/faq/index.html
+++ b/faq/index.html
@@ -108,6 +108,13 @@
           </p>
         </div>
       </div>
+      <div class="faq-item">
+        <div class="faq-question">Do you have a Privacy Policy?</div>
+        <div class="faq-answer">
+          Yes, you can find our Privacy Policy and Terms of Use
+          <a href="/privacy">here</a>.
+        </div>
+      </div>
     </div>
   </body>
 </html>
