Add Steam announcement and update game image; change Godot version to 4.5

--- a/about/index.html
+++ b/about/index.html
@@ -27,6 +27,11 @@
           <a href="https://www.youtube.com/@JamminGameDev" target="_blank"
             >YouTube</a
           >
+          <a
+            href="https://store.steampowered.com/app/4055780/Into_the_Dawn/"
+            target="_blank"
+            >Steam</a
+          >
         </div>
       </div>
     </nav>
@@ -85,7 +90,7 @@
           <h2>Tech Stack & Tools</h2>
           <p>For game development, here's what I'm currently using:</p>
           <div class="tech-stack">
-            <span class="tech-item">Godot 4.4</span>
+            <span class="tech-item">Godot 4.5</span>
             <span class="tech-item">GDScript</span>
             <span class="tech-item">Blender</span>
             <span class="tech-item">Cursor</span>
