--- a/godot-plugins/index.html
+++ b/godot-plugins/index.html
@@ -28,6 +28,11 @@
           <a href="https://www.youtube.com/@JamminGameDev" target="_blank"
             >YouTube</a
           >
+          <a
+            href="https://store.steampowered.com/app/4055780/Into_the_Dawn/"
+            target="_blank"
+            >Steam</a
+          >
         </div>
       </div>
     </nav>
