--- a/privacy/index.html
+++ b/privacy/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Privacy Policy and Terms of Use - Jammin Games</title>
-    <link rel="canonical" href="https://jammin.games/privacy-policy" />
+    <link rel="canonical" href="https://jammin.games/privacy" />
     <meta
       name="description"
       content="Privacy Policy and Terms of Use for Jammin Games and Into the Dawn"
@@ -78,7 +78,7 @@
           <a href="/godot-plugins">Plugins</a>
           <a href="/about">About</a>
           <a href="/faq">FAQ</a>
-          <a href="/privacy-policy">Privacy Policy</a>
+          <a href="/privacy">Privacy Policy</a>
         </div>
         <div class="social-links">
           <!-- <a href="https://discord.gg/your-discord" target="_blank">Discord</a> -->
