--- a/into-the-dawn/index.html
+++ b/into-the-dawn/index.html
@@ -45,12 +45,17 @@
           <a href="https://www.youtube.com/@JamminGameDev" target="_blank"
             >YouTube</a
           >
+          <a
+            href="https://store.steampowered.com/app/4055780/Into_the_Dawn/"
+            target="_blank"
+            >Steam</a
+          >
         </div>
       </div>
     </nav>
 
     <div class="container game-preview">
-      <img src="../assets/images/alpha-0.3.jpg" alt="Into the Dawn Alpha 0.3" />
+      <img src="../assets/images/alpha-0.4.jpg" alt="Into the Dawn Alpha 0.4" />
       <p class="development-status">Under Development</p>
       <p>
         Into the Dawn is a combat helicopter game in development by Jammin
@@ -61,6 +66,49 @@
 
     <div class="container news-section">
       <h2>Latest News</h2>
+      <div class="news-item" id="steam-store-approved">
+        <h3>Steam Store Page Approved!</h3>
+        <p>Posted September 29, 2025 by Jamon Holmgren</p>
+        <p>My Steam store page was just approved today!</p>
+        <figure class="news-image">
+          <img
+            src="../assets/images/steam-page-0.3.jpg"
+            alt="Into the Dawn Steam Store Page"
+          />
+          <figcaption>Into the Dawn Steam Store Page</figcaption>
+        </figure>
+        <p>
+          I'd be honored if you would
+          <a
+            href="https://store.steampowered.com/app/4055780/Into_the_Dawn/"
+            target="_blank"
+            >Wishlist and Follow the game</a
+          >.
+        </p>
+        <p>
+          Apparently I need at least 700 wishlists before Steam takes me
+          seriously, so each one matters.
+        </p>
+        <p>Thank you so much for your support! You are awesome!</p>
+        <p style="margin-top: 2rem">
+          <a
+            href="https://store.steampowered.com/app/4055780/Into_the_Dawn/"
+            target="_blank"
+            style="
+              display: inline-block;
+              background: var(--primary-color);
+              color: var(--text-color);
+              padding: 1rem 2rem;
+              border-radius: 8px;
+              text-decoration: none;
+              font-weight: 500;
+              transition: all 0.3s;
+            "
+          >
+            Wishlist on Steam →
+          </a>
+        </p>
+      </div>
       <div class="news-item" id="alpha-0.3-release">
         <h3>Alpha 0.3 Released!</h3>
         <p>Posted September 19, 2025 by Jamon Holmgren</p>
