--- a/index.html
+++ b/index.html
@@ -41,14 +41,13 @@
       <div class="container">
         <div class="announcement-content">
           <p>
-            <a href="/into-the-dawn"><strong>Into the Dawn</strong></a> is now
-            on Steam!
+            Our combat helicopter game Into the Dawn is now on Steam!
             <a
               href="https://store.steampowered.com/app/4055780/Into_the_Dawn/"
               target="_blank"
               class="steam-cta-button"
             >
-              Wishlist on Steam →
+              Wishlist Into the Dawn on Steam →
             </a>
           </p>
         </div>
@@ -67,7 +66,10 @@
       </video>
       <div class="hero-content">
         <h1>Jammin Games</h1>
-        <p>Jamon Holmgren's Game Development Projects</p>
+        <p>
+          An indie game development studio in the Pacific Northwest,<br />founded
+          by Jamon Holmgren
+        </p>
       </div>
     </div>
 
@@ -160,6 +162,15 @@
         gap: 1rem;
         flex-wrap: wrap;
         justify-content: center;
+      }
+
+      .announcement-content a {
+        text-decoration: none;
+        color: inherit;
+      }
+
+      .announcement-content a:hover {
+        text-decoration: none;
       }
 
       .announcement-content strong {
