Add gritty look

--- a/godot-plugins/index.html
+++ b/godot-plugins/index.html
@@ -70,7 +70,7 @@
               style="
                 margin: 1rem 0;
                 padding-left: 1.5rem;
-                color: var(--text-secondary);
+                color: var(--text-muted);
               "
             >
               <li>Tiny!</li>
@@ -120,7 +120,7 @@
               style="
                 margin: 1rem 0;
                 padding-left: 1.5rem;
-                color: var(--text-secondary);
+                color: var(--text-muted);
               "
             >
               <li>Minimal performance impact</li>
@@ -159,7 +159,7 @@
               Provides a complete solution for managing multiplayer game
               sessions with focus on ease of use and reliability.
             </p>
-            <p style="margin-top: 1rem; color: var(--text-secondary)">
+            <p style="margin-top: 1rem; color: var(--text-muted)">
               <strong>Note:</strong> A more advanced version is under
               development but will likely not be published until Into the Dawn
               is complete.
@@ -168,7 +168,7 @@
               style="
                 margin: 1rem 0;
                 padding-left: 1.5rem;
-                color: var(--text-secondary);
+                color: var(--text-muted);
               "
             >
               <li>ENet-based networking</li>
