--- a/faq/index.html
+++ b/faq/index.html
@@ -17,21 +17,29 @@
         padding: 0 20px;
       }
 
+      .faq-section h1 {
+        font-family: var(--title-font);
+        color: var(--primary-color);
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        margin-bottom: 2rem;
+      }
+
       .faq-item {
-        background: var(--surface-color);
-        border-radius: 12px;
+        background: var(--surface-light);
+        border-radius: 4px;
         padding: 2rem;
         margin-bottom: 2rem;
-        border: 1px solid rgba(255, 255, 255, 0.1);
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        border: 1px solid var(--border-color);
       }
 
       .faq-question {
+        font-family: var(--title-font);
         color: var(--primary-color);
-        font-size: 1.3rem;
-        font-weight: 500;
+        font-size: 1.1rem;
         margin-bottom: 1rem;
-        font-family: var(--subtitle-font);
+        text-transform: uppercase;
+        letter-spacing: 1px;
       }
 
       .faq-answer {
@@ -43,13 +51,11 @@
       .faq-answer a {
         color: var(--primary-color);
         text-decoration: none;
-        transition: all 0.3s;
-        padding: 0.1rem 0.3rem;
-        border-radius: 4px;
+        transition: color 0.2s ease;
       }
 
       .faq-answer a:hover {
-        background: rgba(255, 107, 0, 0.1);
+        color: var(--primary-light);
         text-decoration: underline;
       }
     </style>
