--- a/into-the-dawn/index.html
+++ b/into-the-dawn/index.html
@@ -19,12 +19,16 @@
       .game-preview img {
         width: 100%;
         height: auto;
-        border-radius: 8px;
+        border-radius: 2px;
         margin-bottom: 2rem;
+        filter: saturate(0.8);
       }
       .development-status {
-        font-size: 1.5rem;
+        font-family: var(--title-font);
+        font-size: 1.2rem;
         color: var(--primary-color);
+        text-transform: uppercase;
+        letter-spacing: 2px;
       }
       .about-game-section {
         margin: 4rem auto;
@@ -35,15 +39,15 @@
         margin-bottom: 3rem;
         font-family: var(--title-font);
         color: var(--primary-color);
-        font-size: 2.5rem;
-        font-weight: 300;
+        font-size: 2rem;
+        text-transform: uppercase;
+        letter-spacing: 2px;
       }
       .about-game-content {
-        background: var(--surface-color);
-        border-radius: 16px;
+        background: var(--surface-light);
+        border-radius: 4px;
         padding: 2.5rem;
-        border: 1px solid rgba(255, 255, 255, 0.1);
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        border: 1px solid var(--border-color);
       }
       .about-game-content p {
         color: var(--text-secondary);
@@ -59,7 +63,7 @@
           margin: 3rem auto;
         }
         .about-game-section h2 {
-          font-size: 2rem;
+          font-size: 1.5rem;
           margin-bottom: 2rem;
         }
         .about-game-content {
@@ -71,12 +75,8 @@
       }
 
       .steam-announcement {
-        background: linear-gradient(
-          135deg,
-          rgba(255, 107, 0, 0.15),
-          rgba(255, 133, 51, 0.1)
-        );
-        border-bottom: 2px solid var(--primary-color);
+        background: var(--surface-color);
+        border-bottom: 1px solid var(--border-color);
         padding: 0.75rem 0;
         margin-top: var(--nav-height);
       }
@@ -107,7 +107,7 @@
       }
 
       .announcement-content a:hover {
-        text-decoration: none;
+        color: var(--primary-color);
       }
 
       .announcement-content strong {
@@ -116,20 +116,22 @@
 
       .steam-cta-button {
         display: inline-block;
-        background: var(--gradient-primary);
+        background: var(--surface-light);
         color: var(--text-color);
         padding: 0.5rem 1.5rem;
-        border-radius: 6px;
+        border-radius: 2px;
+        border: 1px solid var(--border-color);
         text-decoration: none;
         font-weight: 500;
-        font-size: 0.95rem;
-        transition: all 0.3s;
-        box-shadow: 0 2px 8px rgba(255, 107, 0, 0.3);
+        font-size: 0.85rem;
+        text-transform: uppercase;
+        letter-spacing: 0.5px;
+        transition: border-color 0.2s ease, color 0.2s ease;
       }
 
       .steam-cta-button:hover {
-        transform: translateY(-1px);
-        box-shadow: 0 4px 12px rgba(255, 107, 0, 0.4);
+        border-color: var(--primary-color);
+        color: var(--primary-color);
         text-decoration: none;
       }
 
@@ -140,7 +142,7 @@
 
         .steam-cta-button {
           padding: 0.4rem 1.2rem;
-          font-size: 0.85rem;
+          font-size: 0.8rem;
         }
       }
     </style>
@@ -309,13 +311,16 @@
             target="_blank"
             style="
               display: inline-block;
-              background: var(--primary-color);
+              background: var(--surface-color);
               color: var(--text-color);
               padding: 1rem 2rem;
-              border-radius: 8px;
+              border-radius: 2px;
+              border: 1px solid var(--border-color);
               text-decoration: none;
               font-weight: 500;
-              transition: all 0.3s;
+              text-transform: uppercase;
+              letter-spacing: 1px;
+              font-size: 0.9rem;
             "
           >
             Wishlist on Steam →
@@ -593,6 +598,9 @@
         text-align: center;
         margin-bottom: 3rem;
         color: var(--text-color);
+        font-family: var(--title-font);
+        text-transform: uppercase;
+        letter-spacing: 2px;
       }
 
       .timeline-grid {
@@ -602,28 +610,28 @@
       }
 
       .timeline-item {
-        background: var(--surface-color);
+        background: var(--surface-light);
         padding: 1.5rem;
-        border-radius: 12px;
-        border: 1px solid rgba(255, 255, 255, 0.1);
+        border-radius: 4px;
+        border: 1px solid var(--border-color);
       }
 
       .timeline-bar {
-        height: 8px;
-        background: rgba(255, 255, 255, 0.1);
-        border-radius: 4px;
+        height: 6px;
+        background: var(--surface-color);
+        border-radius: 2px;
         margin-bottom: 1rem;
         overflow: hidden;
       }
 
       .timeline-progress {
         height: 100%;
-        border-radius: 4px;
+        border-radius: 2px;
         transition: width 0.3s ease;
       }
 
       .timeline-item .timeline-progress {
-        background: linear-gradient(90deg, var(--primary-color), #ff8533);
+        background: var(--primary-color);
       }
 
       .timeline-content {
@@ -635,6 +643,10 @@
       .timeline-content h3 {
         color: var(--text-color);
         margin: 0;
+        font-family: var(--title-font);
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        font-size: 1rem;
       }
 
       .timeline-content p {
@@ -646,6 +658,7 @@
       .timeline-percent {
         color: var(--primary-color);
         font-weight: 500;
+        font-family: var(--mono-font);
       }
 
       .timeline-legend {
@@ -667,19 +680,19 @@
       .legend-dot {
         width: 12px;
         height: 12px;
-        border-radius: 50%;
+        border-radius: 2px;
       }
 
       .legend-dot.planning {
-        background: #ff6b00;
+        background: var(--primary-color);
       }
 
       .legend-dot.development {
-        background: #ff8533;
+        background: var(--primary-light);
       }
 
       .legend-dot.polishing {
-        background: #ffa066;
+        background: var(--primary-dark);
       }
 
       @media (max-width: 768px) {
