--- a/privacy/index.html
+++ b/privacy/index.html
@@ -17,21 +17,29 @@
         padding: 0 20px;
       }
 
+      .legal-section h1 {
+        font-family: var(--title-font);
+        color: var(--primary-color);
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        margin-bottom: 2rem;
+      }
+
       .legal-content {
-        background: var(--surface-color);
-        border-radius: 12px;
+        background: var(--surface-light);
+        border-radius: 4px;
         padding: 2rem;
         margin-bottom: 2rem;
-        border: 1px solid rgba(255, 255, 255, 0.1);
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        border: 1px solid var(--border-color);
       }
 
       .legal-content h2 {
+        font-family: var(--title-font);
         color: var(--primary-color);
-        font-size: 1.5rem;
-        font-weight: 500;
+        font-size: 1.2rem;
         margin-bottom: 1.5rem;
-        font-family: var(--subtitle-font);
+        text-transform: uppercase;
+        letter-spacing: 1px;
       }
 
       .legal-content p {
@@ -54,17 +62,16 @@
       }
 
       .copyright-notice {
-        background: rgba(255, 107, 0, 0.1);
-        border: 1px solid rgba(255, 107, 0, 0.3);
-        border-radius: 8px;
+        background: var(--surface-color);
+        border: 1px solid var(--border-color);
+        border-radius: 4px;
         padding: 1.5rem;
         margin-top: 2rem;
         text-align: center;
       }
 
       .copyright-notice p {
-        color: var(--primary-color);
-        font-weight: 500;
+        color: var(--text-muted);
         margin: 0;
       }
     </style>
