--- a/into-the-dawn/index.html
+++ b/into-the-dawn/index.html
@@ -11,24 +11,83 @@
     />
     <link rel="stylesheet" href="../css/styles.css?v=20250129" />
     <style>
-      .game-preview {
+      .game-header {
+        height: 70vh;
+        position: relative;
+        background: var(--surface-color);
+        overflow: hidden;
+      }
+
+      .game-header img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        opacity: 0.8;
+        filter: saturate(0.6);
+      }
+
+      .game-header::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 40%;
+        background: linear-gradient(0deg, var(--background-color) 0%, transparent 100%);
+      }
+
+      .game-header-content {
+        margin: -120px auto 60px;
+        position: relative;
+        z-index: 2;
         max-width: 800px;
-        margin: 60px auto 40px;
+        padding: 0 20px;
+      }
+
+      .game-header-card {
+        background: var(--surface-light);
+        border-radius: 4px;
+        padding: 2.5rem;
+        border: 1px solid var(--border-color);
         text-align: center;
       }
-      .game-preview img {
-        width: 100%;
-        height: auto;
-        border-radius: 2px;
-        margin-bottom: 2rem;
-        filter: saturate(0.8);
+
+      .game-tagline {
+        color: var(--text-secondary);
+        line-height: 1.8;
+        font-size: 1.1rem;
+        margin: 0;
       }
+
       .development-status {
         font-family: var(--title-font);
         font-size: 1.2rem;
         color: var(--primary-color);
         text-transform: uppercase;
         letter-spacing: 2px;
+        margin-bottom: 1rem;
+      }
+
+      @media (max-width: 768px) {
+        .game-header {
+          height: 50vh;
+        }
+
+        .game-header-content {
+          margin-top: -80px;
+        }
+
+        .game-header-card {
+          padding: 1.5rem;
+        }
+
+        .development-status {
+          font-size: 1rem;
+        }
+
+        .game-tagline {
+          font-size: 1rem;
+        }
       }
       .about-game-section {
         margin: 4rem auto;
@@ -191,14 +250,19 @@
       </div>
     </div>
 
-    <div class="container game-preview">
-      <img src="../assets/images/alpha-0.4.jpg" alt="Into the Dawn Alpha 0.4" />
-      <p class="development-status">Under Development</p>
-      <p>
-        Into the Dawn is a combat helicopter game in development by Jammin
-        Games. It will feature immersive helicopter combat, co-op multiplayer,
-        dynamic campaigns, and much more!
-      </p>
+    <div class="game-header">
+      <img src="../assets/images/alpha-0.4.jpg" alt="Into the Dawn" />
+    </div>
+
+    <div class="game-header-content">
+      <div class="game-header-card">
+        <p class="development-status">Under Development</p>
+        <p class="game-tagline">
+          Into the Dawn is a combat helicopter game in development by Jammin
+          Games. It will feature immersive helicopter combat, co-op multiplayer,
+          dynamic campaigns, and much more!
+        </p>
+      </div>
     </div>
 
     <div class="container about-game-section" id="about-the-game">
