--- a/into-the-dawn/index.html
+++ b/into-the-dawn/index.html
@@ -259,8 +259,8 @@
         <p class="development-status">Under Development</p>
         <p class="game-tagline">
           Into the Dawn is a combat helicopter game in development by Jammin
-          Games. It will feature immersive helicopter combat, co-op multiplayer,
-          dynamic campaigns, and much more!
+          Games. It will feature immersive helicopter combat, co-op multiplayer with up to 8 people,
+          dynamic campaigns, pilot progression, and much more!
         </p>
       </div>
     </div>
