minor content tweak

--- a/faq/index.html
+++ b/faq/index.html
@@ -115,7 +115,7 @@
             If you can't get that to work, you might need to forward a port. In
             your router settings, find the feature for "port forwarding" and add
             a new forwarded port for port 6464 (TCP and UDP) to your computer's
-            IP address (also port 6464).
+            IP address (which should also be port 6464).
           </p>
         </div>
       </div>
